hand added gps code

--- a/angular_ui_app/src/app/components/gps/gps.component.html
+++ b/angular_ui_app/src/app/components/gps/gps.component.html
@@ -1,11 +1,89 @@
 <link rel="stylesheet" href="/assets/leaflet.css" />
 
 <app-generic height="375px" width="375px">
-  <div class="gps">
-    <div class="map-container">
-      <div class="map-frame">
-        <div id="map"></div>
-      </div>
+  <div id="map">
+    <div>
+      <a id="updateMarkersBtn" (click)="showModal = true"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+          fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+          <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
+        </svg></a>
     </div>
   </div>
 </app-generic>
+
+<div class='modal' *ngIf="showModal === true">
+  <div class="inner-modal">
+    <button style="position: absolute; top: 10px; right: 10px;" (click)="showModal = false">Close</button>
+    Add Landmark
+    <div>
+      <input type="text" #landmarkNameInput placeholder="Landmark Name">
+      <input type="number" #landmarkLatInput placeholder="Latitude">
+      <input type="number" #landmarkLngInput placeholder="Longitude">
+    </div>
+    <button (click)="addLandmark(landmarkNameInput.value, landmarkLatInput.value, landmarkLngInput.value)">Add</button>
+
+    <hr />
+
+    Add Debris
+    <div>
+      <input type="text" #debrisNameInput placeholder="Debris Name">
+      <input type="number" #debrisLatInput placeholder="Latitude">
+      <input type="number" #debrisLngInput placeholder="Longitude">
+      <input type="number" #debrisRadius placeholder="Radius (m)">
+    </div>
+    <button
+      (click)="addDebrisArea(debrisNameInput.value, debrisLatInput.value, debrisLngInput.value, debrisRadius.value)">Add</button>
+
+    <hr />
+    <div class="list-section">
+      <h3>Landmarks</h3>
+      <div class="scrollable-list">
+        <table class="table" data-bs-theme="dark">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Lat</th>
+              <th scope="col">Long</th>
+              <th scope="col">Remove</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let marker of markerDict | keyvalue">
+              <td>{{marker.key}}</td>
+              <td>{{marker.value.getLatLng().lat}}</td>
+              <td>{{marker.value.getLatLng().lng}}</td>
+              <td><button class="btn btn-danger p-1 m-0" (click)="removeMarker(marker.key)">x</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="list-section">
+      <h3>Debris</h3>
+      <div class="scrollable-list">
+        <table class="table" data-bs-theme="dark">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Lat</th>
+              <th scope="col">Long</th>
+              <th scope="col">Radius</th>
+              <th scope="col">Remove</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let debris of debrisDict | keyvalue">
+              <td>{{debris.key}}</td>
+              <td>{{debris.value.getLatLng().lat}}</td>
+              <td>{{debris.value.getLatLng().lng}}</td>
+              <td>{{debris.value.getRadius()}}</td>
+              <td><button class="btn btn-danger p-1 m-0" (click)="removeMarker(debris.key)">x</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
