--- a/angular_ui_app/src/app/components/gps/gps.component.scss
+++ b/angular_ui_app/src/app/components/gps/gps.component.scss
@@ -1,13 +1,77 @@
-.map-container {
-  height: 372px;
-  width: 372px;
-  // border: 1px solid black;
-}
-
-.map-frame {
-  height: 100%;
-}
-
 #map {
   height: 100%;
+}
+
+#updateMarkersBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
+  z-index: 4000;
+  border-radius: 2px;
+  box-sizing: border-box;
+  color: black;
+  background-color: #fff;
+  // box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  border: 2px solid rgba(0, 0, 0, 0.2)
+}
+
+#updateMarkersBtn:active {
+  background-color: #c7c7c7;
+}
+
+#updateMarkersBtn:hover {
+  background-color: #f4f4f4;
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.39);
+  z-index: 5000;
+  border-radius: 5px;
+
+}
+
+.inner-modal {
+  position: relative;
+  width: 900px;
+  height: 870px;
+  background-color: rgb(42, 63, 71);
+  padding: 20px;
+  border-radius: 5px;
+  border: #B6CA7B 2px solid;
+  position: absolute;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
+}
+
+.scrollable-list {
+  height: 200px;
+  width: 95%;
+  margin: auto;
+  border: 1px solid black;
+  overflow-y: scroll;
+}
+
+.form-section {
+  margin-bottom: 20px;
+}
+
+
+.list-section {
+  margin-bottom: 20px;
+}
+
+button {
+  margin-top: 10px;
+}
+
+span {
+  align-content: center;
 }
