hand added science auger code

--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -10,6 +10,7 @@
         <div>
             <app-camera camera_size="small"/>
             <app-arm-component/>
+            <app-science-auger/>
         </div>
         <app-gps/>
     </div>
