--- a/angular_ui_app/src/app/components/gps/gps.component.html
+++ b/angular_ui_app/src/app/components/gps/gps.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/assets/leaflet.css" />
 
-<app-generic height="375px" width="375px">
-  <div id="map">
+<app-generic height="500px" width="500px" style="margin-right: 10px;">
+  <div id="map" style="scale: 1.00003;">
     <div>
       <a id="updateMarkersBtn" (click)="showModal = true"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
           fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
