--- a/angular_ui_app/src/app/components/gps/gps.component.scss
+++ b/angular_ui_app/src/app/components/gps/gps.component.scss
@@ -75,3 +75,22 @@ button {
 span {
   align-content: center;
 }
+
+.leaflet-container img.leaflet-tile {
+  mix-blend-mode: normal !important;
+  @media (-webkit-min-device-pixel-ratio: 1) {
+    // NON RETINA
+    width: 513px !important;
+    height: 513px !important;
+  }
+  @media (-webkit-min-device-pixel-ratio: 2) {
+    // RETINA
+    width: 512px !important;
+    height: 512px !important;
+  }
+}
+
+.leaflet-tile-container img {
+  width: 257px !important;
+  height: 257px !important;
+}
