good changes trust

--- a/angular_ui_app/src/app/components/camera/camera-box/camera-box.component.html
+++ b/angular_ui_app/src/app/components/camera/camera-box/camera-box.component.html
@@ -1,3 +1,4 @@
 <div style="position: relative;">
-    <img [src]="imageSrc" alt="ROS Image Stream" />
+    <img *ngIf="size === 'small' " [src]="imageSrc" height="375px"/>
+    <img *ngIf="size === 'large' " [src]="imageSrc" />
 </div>
