--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -1,43 +1,28 @@
 <app-generic height="235px" width="640px">
     Controller <button (click)="enableGamepad()">On</button> <button (click)="disableGamepad()">Off</button>
-    <div class="drive">
-        <div id="driveInfo">
-            <hr />
-            Wheel Feedback (m/s)
-            <div style="display: flex; justify-content: space-evenly;">
-                <div>
-                    <p>{{wheelFeedback.leftFront.toFixed(2)}} LF</p>
-                    <p>{{wheelFeedback.leftBack.toFixed(2)}} LB</p>
-                </div>
-                <div>
-                    <p>RF {{wheelFeedback.rightFront.toFixed(2)}}</p>
-                    <p>RB {{wheelFeedback.rightBack.toFixed(2)}}</p>
-                </div>
+    <hr/>
+    <div style="display: flex; justify-content: space-around;">
+        <div>
+            cmd_vel
+            <div>
+                Linear X: {{cmd_vel_lin_x.toFixed(3)}}
+            </div>
+            <div>
+                Angular Z: {{cmd_vel_ang_z.toFixed(3)}}
             </div>
         </div>
-        <hr />
-        <div id="wheelVelocityCmd">
-            Wheel Velocity Command (m/s)
+        <div>
+            Wheel Feedback
             <div style="display: flex; justify-content: space-evenly;">
                 <div>
-                    <p>{{wheelVelocityCmd.leftFront.toFixed(2)}} LF</p>
-                    <p>{{wheelVelocityCmd.leftBack.toFixed(2)}} LB</p>
+                    <p>0 LF</p>
+                    <p>0 LB</p>
                 </div>
                 <div>
-                    <p>RF {{wheelVelocityCmd.rightFront.toFixed(2)}}</p>
-                    <p>RB {{wheelVelocityCmd.rightBack.toFixed(2)}}</p>
+                    <p>RF 0</p>
+                    <p>RB 0</p>
                 </div>
             </div>
-        </div>
-        <hr />
-        <div id="twistInfo">
-            Drive Twist
-            <p>Linear: {{rover_linear_vel.toFixed(2)}}, Angular: {{rover_angular_vel.toFixed(2)}}</p>
-        </div>
-        <hr />
-        <div id="panTiltInfo">
-            Pan-Tilt
-            <p>Pitch: {{pantilt_pitch.toFixed(2)}}, Yaw: {{pantilt_yaw.toFixed(2)}}</p>
         </div>
     </div>
 </app-generic>
