--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div>
-            <app-arm-component/>
+            <app-camera camera_size="small"/>
             <app-science-auger/>
         </div>
         <app-gps/>
