--- a/angular_ui_app/src/app/components/camera/camera-box/camera-box.component.html
+++ b/angular_ui_app/src/app/components/camera/camera-box/camera-box.component.html
@@ -1,4 +1,5 @@
 <div style="position: relative;">
-    <img *ngIf="size === 'small' " [src]="imageSrc" height="375px"/>
-    <img *ngIf="size === 'large' " [src]="imageSrc" />
+    <!-- <img *ngIf="size === 'small' " [src]="imageSrc" height="375px"/> -->
+    <img  style="rotate: 180deg;" *ngIf="camId=='2'" [src]="imageSrc" />
+    <img  *ngIf="camId=='1'" [src]="imageSrc" />
 </div>
