--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -1,28 +1,53 @@
 <app-generic height="235px" width="640px">
     Controller <button (click)="enableGamepad()">On</button> <button (click)="disableGamepad()">Off</button>
-    <hr/>
-    <div style="display: flex; justify-content: space-around;">
-        <div>
-            cmd_vel
-            <div>
-                Linear X: {{cmd_vel_lin_x.toFixed(3)}}
-            </div>
-            <div>
-                Angular Z: {{cmd_vel_ang_z.toFixed(3)}}
-            </div>
-        </div>
-        <div>
-            Wheel Feedback
+    <div class="drive">
+        <div id="driveInfo">
+            <hr />
+            Wheel Feedback (m/s)
             <div style="display: flex; justify-content: space-evenly;">
                 <div>
-                    <p>0 LF</p>
-                    <p>0 LB</p>
+                    <p>{{wheelFeedback.leftFront.toFixed(2)}} LF</p>
+                    <p>{{wheelFeedback.leftBack.toFixed(2)}} LB</p>
                 </div>
                 <div>
-                    <p>RF 0</p>
-                    <p>RB 0</p>
+                    <p>RF {{wheelFeedback.rightFront.toFixed(2)}}</p>
+                    <p>RB {{wheelFeedback.rightBack.toFixed(2)}}</p>
                 </div>
             </div>
+        </div>
+        <hr />
+        <div id="wheelVelocityCmd">
+            Wheel Velocity Command (m/s)
+            <div style="display: flex; justify-content: space-evenly;">
+                <div>
+                    <p>{{wheelVelocityCmd.leftFront.toFixed(2)}} LF</p>
+                    <p>{{wheelVelocityCmd.leftBack.toFixed(2)}} LB</p>
+                </div>
+                <div>
+                    <p>RF {{wheelVelocityCmd.rightFront.toFixed(2)}}</p>
+                    <p>RB {{wheelVelocityCmd.rightBack.toFixed(2)}}</p>
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div id="twistInfo">
+            Drive Twist
+            <p>Linear: {{rover_linear_vel.toFixed(2)}}, Angular: {{rover_angular_vel.toFixed(2)}}</p>
+        </div>
+        <hr />
+
+        <div id="sensitivityControl">
+            <label for="sensitivitySlider">
+                Keyboard Sensitivity: {{ keyboard_sensitivity.toFixed(3) }}
+            </label>
+            <input type="range" id="sensitivitySlider" [min]="min_sensitivity" [max]="max_sensitivity" [step]="0.001"
+                [(ngModel)]="keyboard_sensitivity" (input)="updateSensitivity($event)">
+            <button type="button" (click)="resetSlider()">Reset Slider</button>
+        </div>
+
+        <div id="panTiltInfo">
+            Pan-Tilt
+            <p>Pitch: {{pantilt_pitch.toFixed(2)}}, Yaw: {{pantilt_yaw.toFixed(2)}}</p>
         </div>
     </div>
 </app-generic>
