added camera flip

--- a/angular_ui_app/src/app/components/arm/arm.component.html
+++ b/angular_ui_app/src/app/components/arm/arm.component.html
@@ -1,94 +1,96 @@
-<app-generic height="550px" width="450px">
-    <div style="display: flex; justify-content: space-between;">
-        <div>
-            Joystick
-            <button (click)="enableGamepad()">On</button>
-            <button (click)="disableGamepad()">Off</button>
+<app-generic height="450px" width="640px">
+    <div style="overflow-y: scroll; height: 100%;">
+        <div style="display: flex; justify-content: space-between;">
+            <div>
+                Joystick
+                <button (click)="enableGamepad()">On</button>
+                <button (click)="disableGamepad()">Off</button>
+            </div>
+            <tr>
+                <th>speedControlValue</th>
+                <!-- ArmComponent this.speedControlValue -->
+                <td>{{formatNumber(speedControlValue)}}</td>
+            </tr>
         </div>
-        <tr>
-            <th>speedControlValue</th>
-            <!-- ArmComponent this.speedControlValue -->
-            <td>{{formatNumber(speedControlValue)}}</td>
-        </tr>
+        <br />
+    
+        <div class="arm">
+            <table>
+                <tr>
+                    <th>Joint</th>
+                    <th>Feedback</th>
+                    <th>Command</th>
+                    <th>Control</th>
+                </tr>
+    
+                <tr>
+                    <td>Elbow</td>
+                    <td>{{formatNumber(arm_brushless_FB[0])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_elbow')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_elbow', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_elbow', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Shoulder</td>
+                    <td>{{formatNumber(arm_brushless_FB[1])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_shoulder')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_shoulder', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_shoulder', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Waist</td>
+                    <td>{{formatNumber(arm_brushless_FB[2])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_waist')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_waist', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_waist', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Wrist Pitch</td>
+                    <td>{{formatNumber(arm_brushed_FB[2])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_wrist_pitch')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_wrist_pitch', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_wrist_pitch', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Wrist Roll</td>
+                    <td>{{formatNumber(arm_brushed_FB[1])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_wrist_roll')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_wrist_roll', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_wrist_roll', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>End Effector</td>
+                    <td>{{formatNumber(arm_brushed_FB[0])}}</td>
+                    <td>{{formatNumber(getJointByName('joint_end_effector')?.setpoint ?? 0)}}</td>
+                    <td style="width: 15%;">
+                        <div id="buttons">
+                            <button (click)="updateJointPosition('joint_end_effector', 1)">+</button>
+                            <button (click)="updateJointPosition('joint_end_effector', -1)">-</button>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    
     </div>
-    <br />
-
-    <div class="arm">
-        <table>
-            <tr>
-                <th>Joint</th>
-                <th>Feedback</th>
-                <th>Command</th>
-                <th>Control</th>
-            </tr>
-
-            <tr>
-                <td>Elbow</td>
-                <td>{{formatNumber(arm_brushless_FB[0])}}</td>
-                <td>{{formatNumber(getJointByName('joint_elbow')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_elbow', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_elbow', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Shoulder</td>
-                <td>{{formatNumber(arm_brushless_FB[1])}}</td>
-                <td>{{formatNumber(getJointByName('joint_shoulder')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_shoulder', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_shoulder', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Waist</td>
-                <td>{{formatNumber(arm_brushless_FB[2])}}</td>
-                <td>{{formatNumber(getJointByName('joint_waist')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_waist', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_waist', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Wrist Pitch</td>
-                <td>{{formatNumber(arm_brushed_FB[2])}}</td>
-                <td>{{formatNumber(getJointByName('joint_wrist_pitch')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_wrist_pitch', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_wrist_pitch', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>Wrist Roll</td>
-                <td>{{formatNumber(arm_brushed_FB[1])}}</td>
-                <td>{{formatNumber(getJointByName('joint_wrist_roll')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_wrist_roll', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_wrist_roll', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>End Effector</td>
-                <td>{{formatNumber(arm_brushed_FB[0])}}</td>
-                <td>{{formatNumber(getJointByName('joint_end_effector')?.setpoint ?? 0)}}</td>
-                <td style="width: 15%;">
-                    <div id="buttons">
-                        <button (click)="updateJointPosition('joint_end_effector', 1)">+</button>
-                        <button (click)="updateJointPosition('joint_end_effector', -1)">-</button>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </div>
-
 </app-generic>
