--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -9,7 +9,8 @@
 
         <div>
             <app-camera camera_size="large" camId="2" />
+            <app-arm-component></app-arm-component>
         </div>
-        <app-arm-component></app-arm-component>
+        <app-gps></app-gps>
     </div>
 </div>
