--- a/angular_ui_app/src/app/components/camera/camera.component.html
+++ b/angular_ui_app/src/app/components/camera/camera.component.html
@@ -1,11 +1,13 @@
 <app-generic *ngIf="camera_size === 'large'" height="480px" width="640px">
     <div style="position: absolute ;margin-left: 85px; z-index: 1000;">
         <input style="width: 50px;" [(ngModel)]="inputCamera">
-        <button style="margin-left: 35px;" (click)="changeCamera()">Change Camera</button>
+        <button (click)="changeCamera()">Change Camera</button>
+
+        <button style="margin-left: 250px;" (click)="flipCamera()">Flip</button>
     </div>
-    <app-camera-box size="large" [camId]="camId"/>
+    <app-camera-box size="large" [camId]="camId" [rotationDeg]="rotationDeg"/>
 </app-generic>
 
 <app-generic *ngIf="camera_size === 'small'" height="375px" width="500px">
-    <app-camera-box size="small" [camId]="camId"/>
+    <app-camera-box size="small" [camId]="camId" [rotationDeg]="rotationDeg"/>
 </app-generic>
